fixing xmsIdentifierValidation errors

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerActiveConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerActiveConfiguration.json
@@ -318,6 +318,7 @@
         },
         "ruleCollectionAppliesToGroups": {
           "type": "array",
+          "x-ms-identifiers": [],
           "items": {
             "$ref": "./networkManagerSecurityAdminConfiguration.json#/definitions/NetworkManagerSecurityGroupItem"
           },
@@ -417,6 +418,7 @@
         },
         "ruleCollectionAppliesToGroups": {
           "type": "array",
+          "x-ms-identifiers": [],
           "items": {
             "$ref": "./networkManagerSecurityAdminConfiguration.json#/definitions/NetworkManagerSecurityGroupItem"
           },
