--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
@@ -264,6 +264,9 @@
         },
         "hubs": {
           "type": "array",
+          "x-ms-identifiers": [
+            "resourceId"
+          ],
           "items": {
             "$ref": "#/definitions/Hub"
           },
@@ -283,6 +286,9 @@
         },
         "appliesToGroups": {
           "type": "array",
+          "x-ms-identifiers": [
+            "networkGroupId"
+          ],
           "items": {
             "$ref": "#/definitions/connectivityGroupItem"
           },
