--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerEffectiveConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerEffectiveConfiguration.json
@@ -223,6 +223,9 @@
         },
         "ruleCollectionAppliesToGroups": {
           "type": "array",
+          "x-ms-identifiers": [
+            "networkGroupId"
+          ],
           "items": {
             "$ref": "./networkManagerSecurityAdminConfiguration.json#/definitions/NetworkManagerSecurityGroupItem"
           },
