--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
@@ -710,6 +710,9 @@
         },
         "appliesToGroups": {
           "type": "array",
+          "x-ms-identifiers": [
+            "networkGroupId"
+          ],
           "items": {
             "$ref": "#/definitions/NetworkManagerSecurityGroupItem"
           },
@@ -793,6 +796,9 @@
         },
         "sources": {
           "type": "array",
+          "x-ms-identifiers": [
+            "addressPrefix"
+          ],
           "items": {
             "$ref": "#/definitions/AddressPrefixItem"
           },
@@ -800,6 +806,9 @@
         },
         "destinations": {
           "type": "array",
+          "x-ms-identifiers": [
+            "addressPrefix"
+          ],
           "items": {
             "$ref": "#/definitions/AddressPrefixItem"
           },
@@ -892,6 +901,9 @@
         },
         "sources": {
           "type": "array",
+          "x-ms-identifiers": [
+            "addressPrefix"
+          ],
           "readOnly": true,
           "items": {
             "$ref": "#/definitions/AddressPrefixItem"
@@ -900,6 +912,9 @@
         },
         "destinations": {
           "type": "array",
+          "x-ms-identifiers": [
+            "addressPrefix"
+          ],
           "readOnly": true,
           "items": {
             "$ref": "#/definitions/AddressPrefixItem"
