--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityUserConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityUserConfiguration.json
@@ -638,6 +638,9 @@
         },
         "sources": {
           "type": "array",
+          "x-ms-identifiers": [
+            "addressPrefix"
+          ],
           "items": {
             "$ref": "./networkManagerSecurityAdminConfiguration.json#/definitions/AddressPrefixItem"
           },
@@ -645,6 +648,9 @@
         },
         "destinations": {
           "type": "array",
+          "x-ms-identifiers": [
+            "addressPrefix"
+          ],
           "items": {
             "$ref": "./networkManagerSecurityAdminConfiguration.json#/definitions/AddressPrefixItem"
           },
@@ -724,6 +730,9 @@
         },
         "sources": {
           "type": "array",
+          "x-ms-identifiers": [
+            "addressPrefix"
+          ],
           "readOnly": true,
           "items": {
             "$ref": "./networkManagerSecurityAdminConfiguration.json#/definitions/AddressPrefixItem"
@@ -732,6 +741,9 @@
         },
         "destinations": {
           "type": "array",
+          "x-ms-identifiers": [
+            "addressPrefix"
+          ],
           "readOnly": true,
           "items": {
             "$ref": "./networkManagerSecurityAdminConfiguration.json#/definitions/AddressPrefixItem"
