Fixed new property name case

--- a/specification/sql/resource-manager/Microsoft.Sql/preview/2021-11-01-preview/examples/ServerExtendedAuditingSettingsList.json
+++ b/specification/sql/resource-manager/Microsoft.Sql/preview/2021-11-01-preview/examples/ServerExtendedAuditingSettingsList.json
@@ -21,7 +21,8 @@
               "storageAccountSubscriptionId": "00000000-0000-0000-0000-000000000000",
               "isStorageSecondaryKeyInUse": false,
               "predicateExpression": "object_name = 'SensitiveData'",
-              "isAzureMonitorTargetEnabled": false
+              "isAzureMonitorTargetEnabled": false,
+              "isManagedIdentityInUse": false
             }
           }
         ]
