--- a/specification/sql/resource-manager/Microsoft.Sql/preview/2021-11-01-preview/examples/DatabaseExtendedAuditingSettingsList.json
+++ b/specification/sql/resource-manager/Microsoft.Sql/preview/2021-11-01-preview/examples/DatabaseExtendedAuditingSettingsList.json
@@ -22,7 +22,8 @@
               "storageAccountSubscriptionId": "00000000-0000-0000-0000-000000000000",
               "isStorageSecondaryKeyInUse": false,
               "predicateExpression": "statement = 'select 1'",
-              "isAzureMonitorTargetEnabled": false
+              "isAzureMonitorTargetEnabled": false,
+              "isManagedIdentityInUse": false
             }
           }
         ]
