--- a/specification/sql/resource-manager/Microsoft.Sql/preview/2021-11-01-preview/examples/ServerAuditingSettingsList.json
+++ b/specification/sql/resource-manager/Microsoft.Sql/preview/2021-11-01-preview/examples/ServerAuditingSettingsList.json
@@ -20,7 +20,8 @@
               "auditActionsAndGroups": [],
               "storageAccountSubscriptionId": "00000000-0000-0000-0000-000000000000",
               "isStorageSecondaryKeyInUse": false,
-              "isAzureMonitorTargetEnabled": false
+              "isAzureMonitorTargetEnabled": false,
+              "isManagedIdentityInUse": false
             }
           }
         ]
