checks not running, changing text to retrigger

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
@@ -1056,7 +1056,7 @@
     "SecurityConfigurationParameter": {
       "name": "configurationName",
       "in": "path",
-      "description": "The name of the network manager security Configuration.",
+      "description": "The name of the network manager Security Configuration.",
       "required": true,
       "type": "string",
       "x-ms-parameter-location": "method"
