--- a/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementListPortalConfig.json
+++ b/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementListPortalConfig.json
@@ -18,9 +18,8 @@
                 "require": false
               },
               "signup": {
-                "enableBasicAccount": true,
+                "enableBasicAuth": true,
                 "termsOfService": {
-                  "enabled": true,
                   "text": "I agree to the service terms and conditions.",
                   "requireConsent": false
                 }
