--- a/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementHeadPortalConfig.json
+++ b/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementHeadPortalConfig.json
@@ -3,7 +3,8 @@
     "serviceName": "apimService1",
     "resourceGroupName": "rg1",
     "api-version": "2021-12-01-preview",
-    "subscriptionId": "subid"
+    "subscriptionId": "subid",
+    "portalConfigId": "default"
   },
   "responses": {
     "200": {
