--- a/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/apimportalconfigs.json
+++ b/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/apimportalconfigs.json
@@ -90,6 +90,9 @@
         },
         "parameters": [
           {
+            "$ref": "./apimanagement.json#/parameters/SubscriptionIdParameter"
+          },
+          {
             "$ref": "./apimanagement.json#/parameters/ResourceGroupNameParameter"
           },
           {
@@ -100,9 +103,6 @@
           },
           {
             "$ref": "./apimanagement.json#/parameters/ApiVersionParameter"
-          },
-          {
-            "$ref": "./apimanagement.json#/parameters/SubscriptionIdParameter"
           }
         ],
         "responses": {
@@ -136,6 +136,9 @@
         },
         "parameters": [
           {
+            "$ref": "./apimanagement.json#/parameters/SubscriptionIdParameter"
+          },
+          {
             "$ref": "./apimanagement.json#/parameters/ResourceGroupNameParameter"
           },
           {
@@ -146,9 +149,6 @@
           },
           {
             "$ref": "./apimanagement.json#/parameters/ApiVersionParameter"
-          },
-          {
-            "$ref": "./apimanagement.json#/parameters/SubscriptionIdParameter"
           }
         ],
         "responses": {
@@ -185,6 +185,9 @@
         },
         "parameters": [
           {
+            "$ref": "./apimanagement.json#/parameters/SubscriptionIdParameter"
+          },
+          {
             "$ref": "./apimanagement.json#/parameters/ResourceGroupNameParameter"
           },
           {
@@ -194,6 +197,12 @@
             "$ref": "./apimanagement.json#/parameters/PortalConfigIdParameter"
           },
           {
+            "$ref": "./apimanagement.json#/parameters/IfMatchRequiredParameter"
+          },
+          {
+            "$ref": "./apimanagement.json#/parameters/ApiVersionParameter"
+          },
+          {
             "name": "parameters",
             "in": "body",
             "required": true,
@@ -201,15 +210,6 @@
               "$ref": "./definitions.json#/definitions/PortalConfigContract"
             },
             "description": "Update the developer portal configuration."
-          },
-          {
-            "$ref": "./apimanagement.json#/parameters/IfMatchRequiredParameter"
-          },
-          {
-            "$ref": "./apimanagement.json#/parameters/ApiVersionParameter"
-          },
-          {
-            "$ref": "./apimanagement.json#/parameters/SubscriptionIdParameter"
           }
         ],
         "responses": {
@@ -237,6 +237,9 @@
         },
         "parameters": [
           {
+            "$ref": "./apimanagement.json#/parameters/SubscriptionIdParameter"
+          },
+          {
             "$ref": "./apimanagement.json#/parameters/ResourceGroupNameParameter"
           },
           {
@@ -246,22 +249,19 @@
             "$ref": "./apimanagement.json#/parameters/PortalConfigIdParameter"
           },
           {
+            "$ref": "./apimanagement.json#/parameters/IfMatchRequiredParameter"
+          },
+          {
+            "$ref": "./apimanagement.json#/parameters/ApiVersionParameter"
+          },
+          {
             "name": "parameters",
             "in": "body",
             "required": true,
             "schema": {
               "$ref": "./definitions.json#/definitions/PortalConfigContract"
             },
-            "description": "Create or update parameters."
-          },
-          {
-            "$ref": "./apimanagement.json#/parameters/IfMatchOptionalParameter"
-          },
-          {
-            "$ref": "./apimanagement.json#/parameters/ApiVersionParameter"
-          },
-          {
-            "$ref": "./apimanagement.json#/parameters/SubscriptionIdParameter"
+            "description": "Update the developer portal configuration."
           }
         ],
         "responses": {
