--- a/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementPortalConfig.json
+++ b/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementPortalConfig.json
@@ -12,13 +12,12 @@
         "type": "Microsoft.ApiManagement/service/portalconfigs",
         "name": "default",
         "properties": {
+          "enableBasicAuth": true,
           "signin": {
             "require": false
           },
           "signup": {
-            "enableBasicAccount": true,
             "termsOfService": {
-              "enabled": true,
               "text": "I agree to the service terms and conditions.",
               "requireConsent": false
             }
