remove readonly attribute

--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/arcSettings.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/arcSettings.json
@@ -279,8 +279,7 @@
         },
         "arcInstanceResourceGroup": {
           "description": "The resource group that hosts the Arc agents, ie. Hybrid Compute Machine resources.",
-          "type": "string",
-          "readOnly": true
+          "type": "string"
         },
         "aggregateState": {
           "description": "Aggregate state of Arc agent across the nodes in this HCI cluster.",
