--- a/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/ServiceConfiguration_Update.json
+++ b/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/ServiceConfiguration_Update.json
@@ -1,16 +1,15 @@
 {
   "parameters": {
     "Endpoint": "{Endpoint}",
-    "config": {
+    "body": {
       "rewardWaitTime": "PT10M",
       "defaultReward": 0.0,
       "rewardAggregation": "earliest",
       "explorationPercentage": 0.2,
       "modelExportFrequency": "PT5M",
       "logMirrorEnabled": true,
-      "logMirrorSasUri": "https://testblob.blob.core.windows.net/container?se=2020-08-13T00%3A00Z&sp=rwl&spr=https&sv=2018-11-09&sr=c&sig=signature",
+      "logMirrorSasUri": "https://testblob.blob.core.windows.net/container?se=2020-08-13T00%3A00Z\u0026sp=rwl\u0026spr=https\u0026sv=2018-11-09\u0026sr=c\u0026sig=signature",
       "logRetentionDays": 7,
-      "lastConfigurationEditDate": "0001-01-01T00:00:00Z",
       "learningMode": "Online",
       "isAutoOptimizationEnabled": true,
       "autoOptimizationFrequency": "P7D",
@@ -20,7 +19,9 @@
   },
   "responses": {
     "200": {
-      "headers": {},
+      "headers": {
+        
+      },
       "body": {
         "rewardWaitTime": "PT10M",
         "defaultReward": 0.0,
@@ -28,9 +29,9 @@
         "explorationPercentage": 0.2,
         "modelExportFrequency": "PT5M",
         "logMirrorEnabled": true,
-        "logMirrorSasUri": "https://testblob.blob.core.windows.net/container?se=2020-08-13T00%3A00Z&sp=rwl&spr=https&sv=2018-11-09&sr=c&sig=signature",
+        "logMirrorSasUri": "https://testblob.blob.core.windows.net/container?se=2020-08-13T00%3A00Z\u0026sp=rwl\u0026spr=https\u0026sv=2018-11-09\u0026sr=c\u0026sig=signature",
         "logRetentionDays": 7,
-        "lastConfigurationEditDate": "0001-01-01T00:00:00Z",
+        "lastConfigurationEditDate": "2020-01-08T01:01:01",
         "learningMode": "Online",
         "isAutoOptimizationEnabled": true,
         "autoOptimizationFrequency": "P7D",
