--- a/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementUpdatePortalConfig.json
+++ b/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementUpdatePortalConfig.json
@@ -5,7 +5,39 @@
     "api-version": "2021-12-01-preview",
     "subscriptionId": "subid",
     "portalConfigId": "default",
-    "If-Match": "*"
+    "If-Match": "*",
+    "parameters": {
+      "properties": {
+        "enableBasicAuth": true,
+        "signin": {
+          "require": false
+        },
+        "signup": {
+          "termsOfService": {
+            "text": "I agree to the service terms and conditions.",
+            "requireConsent": false
+          }
+        },
+        "delegation": {
+          "delegateRegistration": false,
+          "delegateSubscription": false,
+          "delegationUrl": null,
+          "validationKey": null
+        },
+        "csp": {
+          "mode": "reportOnly",
+          "reportUri": "https://report.contoso.com",
+          "allowedSources": [
+            "*.contoso.com"
+          ]
+        },
+        "cors": {
+          "allowedOrigins": [
+            "https://contoso.com"
+          ]
+        }
+      }
+    }
   },
   "responses": {
     "200": {
