Support default custom domain

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerApps.json
@@ -536,6 +536,13 @@
             "revisionName"
           ]
         },
+        "defaultCustomDomain": {
+          "description": "Custom domain to be used by default for the Active revision",
+          "type": "object",
+          "schema": {
+            "$ref": "#/definitions/CustomDomain"
+          }
+        },
         "customDomains": {
           "description": "custom domain bindings for Container Apps' hostnames.",
           "type": "array",
