Add Custom Domain Verification Id

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerApps.json
@@ -447,6 +447,11 @@
               "type": "string",
               "readOnly": true
             },
+            "customDomainVerificationId": {
+              "description": "Id used to verify domain name ownership",
+              "type": "string",
+              "readOnly": true
+            },
             "configuration": {
               "$ref": "#/definitions/Configuration",
               "description": "Non versioned Container App configuration properties."
