--- a/specification/iotcentral/resource-manager/Microsoft.IoTCentral/preview/2021-11-01-preview/examples/Apps_Update.json
+++ b/specification/iotcentral/resource-manager/Microsoft.IoTCentral/preview/2021-11-01-preview/examples/Apps_Update.json
@@ -3,7 +3,7 @@
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "resRg",
     "resourceName": "myIoTCentralApp",
-    "api-version": "2021-06-01",
+    "api-version": "2021-11-01-preview",
     "AppPatch": {
       "properties": {
         "displayName": "My IoT Central App 2"
