--- a/specification/network/resource-manager/Microsoft.Network/stable/2021-06-01/examples/VpnServerConfigurationList.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2021-06-01/examples/VpnServerConfigurationList.json
@@ -36,6 +36,52 @@
                   "pfsGroup": "PFS14"
                 }
               ],
+			  "configurationPolicyGroups": [
+				{
+					"name": "policyGroup1",
+					"etag": "w/\\00000000-0000-0000-0000-000000000000\\",				
+					"groupName": "rg1",
+					"subscriptionId": "subid",
+					"fullName": [
+						"vpnServerConfiguration1",
+						"policyGroup1"
+					],
+					"properties": {
+						"provisioningState": "Succeeded",			
+						"isDefault": true,
+						"priority": 0,
+						"policyMembers": [
+							{
+								"name": "policy1",
+								"attributeType": "RadiusAzureGroupId",
+								"attributeValue": "6ad1bd08"
+							}
+						]
+					}
+				},
+				{
+					"name": "policyGroup2",
+					"etag": "w/\\00000000-0000-0000-0000-000000000000\\",				
+					"groupName": "rg1",
+					"subscriptionId": "subid",
+					"fullName": [
+						"vpnServerConfiguration1",
+						"policyGroup2"
+					],
+					"properties": {
+						"provisioningState": "Succeeded",					
+						"isDefault": true,
+						"priority": 0,
+						"policyMembers": [
+							{
+								"name": "policy2",
+								"attributeType": "CertificateGroupId",
+								"attributeValue": "red.com"
+							}
+						]
+					}
+				}
+			  ],		  
               "vpnClientRootCertificates": [
                 {
                   "name": "vpnServerConfigVpnClientRootCert1",
@@ -93,6 +139,52 @@
                   "pfsGroup": "PFS14"
                 }
               ],
+			  "configurationPolicyGroups": [
+				{
+					"name": "policyGroup1",
+					"etag": "w/\\00000000-0000-0000-0000-000000000000\\",				
+					"groupName": "rg1",
+					"subscriptionId": "subid",
+					"fullName": [
+						"vpnServerConfiguration2",
+						"policyGroup1"
+					],
+					"properties": {
+						"provisioningState": "Succeeded",			
+						"isDefault": true,
+						"priority": 0,
+						"policyMembers": [
+							{
+								"name": "policy1",
+								"attributeType": "RadiusAzureGroupId",
+								"attributeValue": "6ad1bd08"
+							}
+						]
+					}
+				},
+				{
+					"name": "policyGroup2",
+					"etag": "w/\\00000000-0000-0000-0000-000000000000\\",				
+					"groupName": "rg1",
+					"subscriptionId": "subid",
+					"fullName": [
+						"vpnServerConfiguration2",
+						"policyGroup2"
+					],
+					"properties": {
+						"provisioningState": "Succeeded",					
+						"isDefault": true,
+						"priority": 0,
+						"policyMembers": [
+							{
+								"name": "policy2",
+								"attributeType": "CertificateGroupId",
+								"attributeValue": "red.com"
+							}
+						]
+					}
+				}
+			  ],			  
               "vpnClientRootCertificates": [
                 {
                   "name": "vpnServerConfigVpnClientRootCert1",
