adding force delete and recursive delete parameters

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
@@ -127,6 +127,11 @@
         ],
         "operationId": "ConnectivityConfigurations_Delete",
         "description": "Deletes a network manager connectivity configuration, specified by the resource group, network manager name, and connectivity configuration name",
+        "parameters": [
+          {
+            "$ref": "./networkManagerSecurityAdminConfiguration.json#/parameters/ForceDeleteParameter"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Delete successful."
