add missing x-mx-paramter-location attributes, and fix warnings

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
@@ -1138,14 +1138,16 @@
       "in": "query",
       "required": false,
       "type": "boolean",
-      "description": "Deletes the resource recursively. When present in a security configuration delete, all rule collections and rules within the configuration will be deleted. When present in a rule collection delete, all rules within the collection will be deleted."
+      "description": "Deletes the resource recursively. When present in a security configuration delete, all rule collections and rules within the configuration will be deleted. When present in a rule collection delete, all rules within the collection will be deleted.",
+      "x-ms-parameter-location": "method"
     },
     "ForceDeleteParameter": {
       "name": "force",
       "in": "query",
       "required": false,
       "type": "boolean",
-      "description": "Deletes the resource even if it is part of a deployed configuration. If the configuration has been deployed, the service will do a cleanup deployment in the background, prior to the delete."
+      "description": "Deletes the resource even if it is part of a deployed configuration. If the configuration has been deployed, the service will do a cleanup deployment in the background, prior to the delete.",
+      "x-ms-parameter-location": "method"
     }
   }
 }
