adding force delete and recursive delete parameters

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
@@ -381,6 +381,7 @@
           "description": "Group connectivity type."
         }
       },
+      "description": "Connectivity group item.",
       "required": [
         "networkGroupId",
         "groupConnectivity"
